# flags

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
data/: prog_desc.txt
drawer/: drawer.puml  flags
flags-macro/: CMakeLists.txt  main.cpp  readme.md
flags-macro/include/: flags.h
flags-template/: main.cpp  readme.md
flags-template/docs/: Doxyfile
flags-template/docs/html/: annotated.html  classes.html  classns__flags_1_1_bool_arg-members.html  classns__flags_1_1_bool_arg.html  classns__flags_1_1_bool_arg__coll__graph.map  classns__flags_1_1_bool_arg__inherit__graph.md5  classns__flags_1_1_bool_vec_arg-members.html  classns__flags_1_1_bool_vec_arg.html  classns__flags_1_1_bool_vec_arg__inherit__graph.map  classns__flags_1_1_bool_vec_arg__inherit__graph.md5  classns__flags_1_1_double_arg-members.html  classns__flags_1_1_double_arg.html  classns__flags_1_1_double_arg__coll__graph.map  classns__flags_1_1_double_arg__coll__graph.md5  classns__flags_1_1_double_vec_arg-members.html  classns__flags_1_1_double_vec_arg.html  classns__flags_1_1_double_vec_arg__coll__graph.map  classns__flags_1_1_double_vec_arg__inherit__graph.md5  classns__flags_1_1_int_arg-members.html  classns__flags_1_1_int_arg.html  classns__flags_1_1_int_arg__coll__graph.md5  classns__flags_1_1_int_arg__inherit__graph.map  classns__flags_1_1_int_vec_arg-members.html  (+77 more)
flags-template/drawer/: parser.puml
flags-template/include/: flags.hpp
flags-v2/: readme.md
flags-v2/src/: main.cpp
src/: CMakeLists.txt  main.cpp  self_def_option.cpp
src/include/: arg_type.hpp  flags.hpp
(+69 files in other folders)
